Review quantum annealing section

--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,4 +1,64 @@
 
+@article{finley_quantum_2017,
+	title = {Quantum {Computing} {Is} {Real}, and {D}-{Wave} {Just} {Open}-{Sourced} {It}},
+	issn = {1059-1028},
+	url = {https://www.wired.com/2017/01/d-wave-turns-open-source-democratize-quantum-computing/},
+	urldate = {2025-04-17},
+	journal = {Wired},
+	author = {Finley, Klint},
+	year = {2017},
+}
+
+@article{bapst_quantum_2013,
+	title = {The quantum adiabatic algorithm applied to random optimization problems: {The} quantum spin glass perspective},
+	volume = {523},
+	issn = {0370-1573},
+	shorttitle = {The quantum adiabatic algorithm applied to random optimization problems},
+	doi = {10.1016/j.physrep.2012.10.002},
+	number = {3},
+	journal = {Physics Reports},
+	author = {Bapst, V. and Foini, L. and Krzakala, F. and Semerjian, G. and Zamponi, F.},
+	month = feb,
+	year = {2013},
+	pages = {127--205},
+}
+
+@article{farhi_quantum_2001,
+	title = {A {Quantum} {Adiabatic} {Evolution} {Algorithm} {Applied} to {Random} {Instances} of an {NP}-{Complete} {Problem}},
+	volume = {292},
+	doi = {10.1126/science.1057726},
+	number = {5516},
+	journal = {Science},
+	author = {Farhi, Edward and Goldstone, Jeffrey and Gutmann, Sam and Lapan, Joshua and Lundgren, Andrew and Preda, Daniel},
+	month = apr,
+	year = {2001},
+	note = {Publisher: American Association for the Advancement of Science},
+	pages = {472--475},
+}
+
+@article{boixo_experimental_2013,
+	title = {Experimental signature of programmable quantum annealing},
+	volume = {4},
+	copyright = {2013 Springer Nature Limited},
+	issn = {2041-1723},
+	doi = {10.1038/ncomms3067},
+	number = {2067},
+	journal = {Nature Communications},
+	author = {Boixo, Sergio and Albash, Tameem and Spedalieri, Federico M. and Chancellor, Nicholas and Lidar, Daniel A.},
+	month = jun,
+	year = {2013},
+	note = {Publisher: Nature Publishing Group},
+}
+
+@book{sakurai_quantum_2020,
+	place={Cambridge},
+	edition={3},
+	title={Modern Quantum Mechanics},
+	publisher={Cambridge University Press},
+	author={Sakurai, J. J. and Napolitano, Jim},
+	year={2020}
+}
+
 @misc{miranda_quantum_2021,
 	title = {A {Quantum} {Natural} {Language} {Processing} {Approach} to {Musical} {Intelligence}},
 	doi = {10.48550/arXiv.2111.06741},
